# 3D_OBJECT_POSITIONAL_PREDICTION

./: .clang-format  .clang-format-compare.py  .fetch-build-environment.sh  .gitignore  .travis.yml  BuildModule.cmake  CMakeLists.txt  Sources.cmake  TestModule.cmake  test.bat  test.sh
src/: Calculations.cpp  Calculations.hpp  Vector.hpp  Vector3D.hpp  calculations.cpp  calculations.hpp  libc-stub.cpp  main.cpp  object-trajectory-predictor.cpp  object-trajectory-predictor.hpp  object_data.cpp  object_data.hpp  object_trajectory_predictor.cpp  object_trajectory_predictor.hpp  vector3d.hpp  wrap-hwlib.cpp
test/: test_main.cpp
